fix some cross-references and typos

--- a/code/mpsa/KKDCRCJNGenderAndMeasuresOfRacialAttitudesMPSA2023.qmd
+++ b/code/mpsa/KKDCRCJNGenderAndMeasuresOfRacialAttitudesMPSA2023.qmd
@@ -118,7 +118,7 @@ Men and Women are not both taught equally that politics is a place for them. Pre
 
 These socialized differences between men and women do not just occur as messages that women do not belong in politics, but they occur as other taught differences in how to interact with other people. One such example is that women tend to be more conflict avoidant and less self-confident which both predict lower political participation and tendency to seek office[@wolak_2020_jop; @wolak_2022_pb].
 
-Women are documented to exhibit less social dominance orientation than men [see @wilson_liu_2003_bjsp]. We might expect that this is rooted in deep gendered norms and stereotypes. Social dominance orientation appears to be socialized in that many children tend to prefer equality early but often shift towards exhibiting more preferences for defending hierarchy when parented by those high in social dominance orientation [@reifen-tagar_cimpian_2022_pp; @guidetti_et-al_2021_plos]. Rooted in a deep history of white supremicist ideology, American society hold white women as symbols of purity and often put pressure on them to protect the purity of the white race [@junn_2017_pgi]. Furthermore, gendered stereotypes are rife in politics where men are often considered to be defenders and protectors from many physical threats, whereas women are seen more as caretakers [@huddy_terkildsen_1993_prq; @holman_et-al_2016_prq]. These stereotypes of masculinity fit closely with social dominance orientation in that both are conceptualized as reactions to threat. This may explain differences in social dominance orientation between men and women[^1].
+Women are documented to exhibit less social dominance orientation than men [see @wilson_liu_2003_bjsp]. We might expect that this is rooted in deep gendered norms and stereotypes. Social dominance orientation appears to be socialized in that many children tend to prefer equality early but often shift towards exhibiting more preferences for defending hierarchy when parented by those high in social dominance orientation [@reifen-tagar_cimpian_2022_pp; @guidetti_et-al_2021_plos]. Rooted in a deep history of white supremacist ideology, American society hold white women as symbols of purity and often put pressure on them to protect the purity of the white race [@junn_2017_pgi]. Furthermore, gendered stereotypes are rife in politics where men are often considered to be defenders and protectors from many physical threats, whereas women are seen more as caretakers [@huddy_terkildsen_1993_prq; @holman_et-al_2016_prq]. These stereotypes of masculinity fit closely with social dominance orientation in that both are conceptualized as reactions to threat. This may explain differences in social dominance orientation between men and women[^1].
 
 [^1]: Though see @sidanius_et-al_1994_jpsp.
 
@@ -143,9 +143,9 @@ The American National Election Study includes a modified version of the racial r
 
 : Common measures of racial resentment and white political identity {#tbl-race-resent-and-identity-battery}
 
-We believe these items to appeal differently to white men and women due to gender-based differences in social dominance orientation. The measure of racial resentment in the American National Election Study appears to reflect desire to maintain the racial hiearchy and to engage in system justification for Black American's mistreatment. System justification is commonly associated with social dominance orientation attitudes as system legitimizing beliefs are often a reflection of beliefs that the current system creating this hierarchy is not only justified but that it also should not be changed [see @levin_et-al_1998_pp; @levin_et-al_2002_pspb]. Many of the measures for white political identity, on the other hand, are much less focused on capturing beliefs in systems establishing hierarchy, but rather is more focused on the communal well-being of the racial group. In the realm of politics, gender stereotypes often presume that women are much more communal, less combative, and the socialization of women to buy into those stereotypes often appear in politics [see @wolak_mcdevitt_2011_pb; @lay_et-al_2021_pg; @wolak_2022_pb; @conroy_green_2020]. There are measures in the white identity battery that seemingly do appeal towards a protectionist view of other whites that may be attractive to those scoring highly on social dominance orientation.
+We believe these items to appeal differently to white men and women due to gender-based differences in social dominance orientation. The measure of racial resentment in the American National Election Study appears to reflect desire to maintain the racial hierarchy and to engage in system justification for Black American's mistreatment. System justification is commonly associated with social dominance orientation attitudes as system legitimizing beliefs are often a reflection of beliefs that the current system creating this hierarchy is not only justified but that it also should not be changed [see @levin_et-al_1998_pp; @levin_et-al_2002_pspb]. Many of the measures for white political identity, on the other hand, are much less focused on capturing beliefs in systems establishing hierarchy, but rather is more focused on the communal well-being of the racial group. In the realm of politics, gender stereotypes often presume that women are much more communal, less combative, and the socialization of women to buy into those stereotypes often appear in politics [see @wolak_mcdevitt_2011_pb; @lay_et-al_2021_pg; @wolak_2022_pb; @conroy_green_2020]. There are measures in the white identity battery that seemingly do appeal towards a protectionist view of other whites that may be attractive to those scoring highly on social dominance orientation.
 
-We first take a look at the 2016 and 2020 American National Election Studies to descriptively get an understanding of the correlation between gender identification of white respondents and available measures for racial resentment and white political identity. For both studies, we use the `data.table` R package [@dataTable] to recode the the gender (0 = Male, 1 = Female), racial resentment (average of response to likert scale ranging from 1 = Strongly Disagree to 5 = Strongly Agree), white identity (1 = Not at all important to 5 = Very important), and party identification variables (1 = Strong Democrat to 7 = Strong Republican). In @tbl-study-1-descriptive-stats-2016 and @tbl-study-1-descriptive-stats-2020 we present the unweighted summary statistics of the sample on these variables using the `modelsummary` package [@modelsummary].
+We first take a look at the 2016 and 2020 American National Election Studies to descriptively get an understanding of the correlation between gender identification of white respondents and available measures for racial resentment and white political identity. For both studies, we use the `data.table` R package [@dataTable] to recode the the gender (0 = Male, 1 = Female), racial resentment (average of response to Likert scale ranging from 1 = Strongly Disagree to 5 = Strongly Agree), white identity (1 = Not at all important to 5 = Very important), and party identification variables (1 = Strong Democrat to 7 = Strong Republican). In @tbl-study-1-descriptive-stats-2016 and @tbl-study-1-descriptive-stats-2020 we present the unweighted summary statistics of the sample on these variables using the `modelsummary` package [@modelsummary].
 
 ```{r}
 #| label: tbl-study-1-descriptive-stats-2016
@@ -292,7 +292,7 @@ raceResentPlot2020
 widPlot2020
 ```
 
-We first want to examine simple gendered differences between the racial resentment and white political identity variable. In @fig-box-whisker-plot we present a box-and-whisker plot generated with the `ggplot2` package [@ggplot2] for these two variables for white men and white women. We do not observe much of a difference between men and women on these measures. We break this down by partisanship. @fig-box-whisker-plot-republican displays box-and-whisker plots for Republicans (including leaners) and @fig-box-whisker-plot-democrat displays box-and-whisker plots for Democrats (including leaners).
+We first want to examine simple gendered differences between the racial resentment and white political identity variable. In @fig-box-whisker-plot we present a box-and-whisker plot generated with the `ggplot2` package [@ggplot2] for these two variables for white men and white women. We do not observe much of a difference between men and women on these measures. We break this down by partisanship. @fig-box-whisker-plot-republican displays box-and-whisker plots for Republicans (including leaners) and @fig-box-whisker-plot-democrat displays box-and-whisker plots for Democrats (including leaners). We also want to break this down by item. As we have only one item for the White identity measure in both the 2016 and 2020 American National Election Study, we present plot-and-whisker plots for the racial resentment items only in @fig-box-whisker-plot-republican and @fig-box-whisker-plot-democrat-item.
 
 ```{r}
 #| label: fig-box-whisker-plot-republican
